deployment/namespaces.yml
apiVersion: v1
kind: Namespace
metadata:
  name: futbolin

---

apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager

---

apiVersion: v1
kind: Namespace
metadata:
  name: rabbitmq
